[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mudu"
version = "1.1.501"
description = "A python package for unit-aware numerical data handling."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }

authors = [
  { name = "Kolawole Andrew", email = "andrewolakola@gmail.com" }
]

requires-python = ">=3.12"

dependencies = [
  "sympy>=1.13.3"
]

keywords = [
  "units",
  "physics",
  "engineering",
  "dimension-analysis",
  "unit-conversion",
  "unit-aware computing"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/techkaduna/mudu"
Repository = "https://github.com/techkaduna/mudu"

[tool.setuptools]
packages = { find = {} }
